@@ -14,6 +14,12 @@ checkBox.meter.voltmeter=Voltmeter
 checkBox.meter.eFieldDetector=Electric Field Detector
 checkBox.showValues=Show Values
 
+dielectric.custom=custom
+dielectric.teflon=teflon
+dielectric.glass=glass
+dielectric.paper=paper
+dielectric.air=air
+
 label.separation=Separation
 label.plateArea=Plate Area
 label.offset=Offset
@@ -25,12 +31,6 @@ label.none=none
 label.lotsPositive=lots (+)
 label.lotsNegative=lots (-)
 label.showVectors=Show Vectors
-
-material.custom=custom
-material.teflon=teflon
-material.polystyrene=polystyrene
-material.paper=paper
-material.air=air
 
 meter.plateCharge=Plate Charge (top)
 meter.storedEnergy=Stored Energy
