@@ -17,12 +17,24 @@ public interface IBoxColorStrategy {
     public Color getFrontColor( Color baseColor );
 
     public Color getSideColor( Color baseColor );
+    
+    abstract static class AbstractColorStrategy implements IBoxColorStrategy {
+        /*
+         * Color.darker doesn't preserve alpha, so we need our own method.
+         * Notes that this results in the allocation of 2 Colors,
+         * but that's not an issue for this sim.
+         */
+        protected Color darker( Color color ) {
+            Color c = color.darker();
+            return new Color( c.getRed(), c.getGreen(), c.getBlue(), color.getAlpha() );
+        }
+    }
 
     /**
      * Top and front use the base color.
      * Side uses a darker shade of the front color.
      */
-    public static class TwoColorStrategy implements IBoxColorStrategy {
+    public static class TwoColorStrategy extends AbstractColorStrategy {
 
         public Color getTopColor( Color baseColor ) {
             return baseColor;
@@ -33,7 +45,7 @@ public interface IBoxColorStrategy {
         }
 
         public Color getSideColor( Color baseColor ) {
-            return getFrontColor( baseColor ).darker();
+            return darker( getFrontColor( baseColor ) );
         }
     }
 
@@ -42,18 +54,18 @@ public interface IBoxColorStrategy {
      * Front uses a darker shade of the top color.
      * Side uses a darker shade of the front color.
      */
-    public static class ThreeColorStrategy extends TwoColorStrategy {
-
+    public static class ThreeColorStrategy extends AbstractColorStrategy {
+        
         public Color getTopColor( Color baseColor ) {
             return baseColor;
         }
 
         public Color getFrontColor( Color baseColor ) {
-            return getTopColor( baseColor ).darker();
+            return darker( getTopColor( baseColor ) );
         }
 
         public Color getSideColor( Color baseColor ) {
-            return getFrontColor( baseColor ).darker();
+            return darker( getFrontColor( baseColor ) );
         }
     }
 }
